--- a/vercel.json
+++ b/vercel.json
@@ -20,18 +20,10 @@
       "dest": "/public/$1"
     }
   ],
-  "functions": {
-    "api/cron.js": {
-      "maxDuration": 15
-    },
-    "api/trigger.js": {
-      "maxDuration": 15
-    }
-  },
   "crons": [
     {
       "path": "/api/cron",
-      "schedule": "*/10 * * * *"
+      "schedule": "0 9 * * *"
     }
   ]
 }
